; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/printing/monitors/localmon/ui/extr_localui.c_dlg_configure_lpt.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/printing/monitors/localmon/ui/extr_localui.c_dlg_configure_lpt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@LOCALUI_hInstance = common dso_local global i32 0, align 4
@LPTCONFIG_DIALOG = common dso_local global i32 0, align 4
@dlgproc_lptconfig = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"got %u with %u\0A\00", align 1
@ERROR_CANCELLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @dlg_configure_lpt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dlg_configure_lpt(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @LOCALUI_hInstance, align 4
  %10 = load i32, i32* @LPTCONFIG_DIALOG, align 4
  %11 = call i32 @MAKEINTRESOURCEW(i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @dlgproc_lptconfig, align 4
  %14 = ptrtoint %struct.TYPE_2__* %5 to i32
  %15 = call i32 @DialogBoxParamW(i32 %9, i32 %11, i32 %12, i32 %13, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 (...) @GetLastError()
  %18 = call i32 @TRACE(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %2
  %22 = load i32, i32* @ERROR_CANCELLED, align 4
  %23 = call i32 @SetLastError(i32 %22)
  br label %24

24:                                               ; preds = %21, %2
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local i32 @DialogBoxParamW(i32, i32, i32, i32, i32) #1

declare dso_local i32 @MAKEINTRESOURCEW(i32) #1

declare dso_local i32 @TRACE(i8*, i32, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @SetLastError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
